--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             </div>
         </div>
 
+        <!-- Cake Page -->
+        <div id="cake-page" class="page">
+            <img src="images/heading.png" alt="Happy Birthday Geebee!" class="heading-image">
+            <div class="subtitle">Here's something sweet for your special day!</div>
+            <div class="cake-container">
+                <img src="images/cake-image.png" alt="Birthday Cake" class="cake-image">
+                <button id="play-audio" class="audio-button">
+                    <span>🎵</span> Play Birthday Song
+                </button>
+            </div>
+            <button class="nav-button" onclick="showPage('memory-wall')">
+                Continue to Your Memories →
+            </button>
+        </div>
+
         <!-- Memory Wall Page -->
         <div id="memory-wall" class="page">
             <img src="images/heading.png" alt="Happy Birthday Geebee!" class="heading-image">
