--- a/index.html
+++ b/index.html
@@ -347,6 +347,14 @@
             <div class="cake-image">
                 <img src="images/birthday-cake.png" alt="Birthday Cake">
             </div>
+
+            <iframe 
+                style="border-radius:12px; margin-top: 20px;"
+                src="https://open.spotify.com/embed/track/4m8pjYd0kWKc5voea8pWAV?utm_source=generator"
+                width="100%" height="152" frameborder="0"
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy">
+            </iframe>
         </div>
     </div>
 
