--- a/index.html
+++ b/index.html
@@ -449,8 +449,7 @@
                     A special birthday wish just for you!
                 </p>
                 <audio class="audio-player" controls>
-                    <source src="images/birthday-message.mp3" type="audio/mpeg">
-                    <source src="images/birthday-message.wav" type="audio/wav">
+                    <source src="images/birthday-message.m4a" type="audio/mp4">
                     Your browser does not support the audio element.
                 </audio>
             </div>
