--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     A special birthday wish just for you!
                 </p>
                 <audio class="audio-player" controls>
-                    <source src="images/birthday-message.m4a" type="audio/mp4">
+                    <source src="audio/birthday-message.m4a" type="audio/mp4">
                     Your browser does not support the audio element.
                 </audio>
             </div>
